<resources>
    <string name="app_name">Mood Alert</string>
    <string name="sign_in_title">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="register_title">Register</string>
    <string name="name_hint">Name</string>
    <string name="subject_hint">Subject name</string>
    <string name="send_alert_button">Send Alert</string>
    <string name="friends_button">Friends</string>
    <string name="send_alert_title">Send Alert</string>
    <string name="mood_hint">Short description</string>
    <string name="send_button">Send</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="friends_title">Friends</string>
    <string name="auth_failed_toast">Invalid email/password</string>
    <string name="mismatch_toast">Password confirmation does not match</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="spinner_prompt">Select subject</string>
    <string name="friend_not_found_toast">That email is not registered</string>
    <string name="hour_abbreviation">h</string>
    <string name="minute_abbreviation">m</string>
    <string name="second_abbreviation">s</string>
    <string name="timestamp_suffix">ago</string>
    <string name="register_err_toast">Invalid information</string>
    <string name="spinner_default">Not a user</string>
</resources>
