<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.raysun.moodalert.AlertActivity">

    <TextView
        android:text="@string/send_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:id="@+id/textView_title"
        android:fontFamily="sans-serif"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/spinner_exclude"
        android:spinnerMode="dialog"
        android:layout_marginTop="25dp"
        android:prompt="@string/spinner_prompt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:layout_marginTop="10dp"
        android:id="@+id/editText_name"
        android:hint="@string/subject_hint"
        android:fontFamily="sans-serif"
        android:layout_below="@id/spinner_exclude"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:layout_marginTop="10dp"
        android:id="@+id/editText_mood"
        android:hint="@string/mood_hint"
        android:fontFamily="sans-serif"
        android:layout_below="@id/editText_name"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="sendAlert"/>

</RelativeLayout>
