<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.raysun.moodalert.SignInActivity">

    <TextView
        android:text="@string/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:id="@+id/textView_title"
        android:fontFamily="sans-serif"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="15"
        android:layout_marginTop="25dp"
        android:id="@+id/editText_email"
        android:hint="@string/email_hint"
        android:fontFamily="sans-serif"
        android:layout_below="@id/textView_title"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:layout_below="@id/editText_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editText_password"
        android:hint="@string/password_hint"
        android:fontFamily="sans-serif"
        android:textSize="24sp" />

    <Button
        android:text="@string/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/button_signin"
        android:onClick="signIn"/>

    <Button
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="register" />
</RelativeLayout>
